# cowork

./: .gitignore  .prettierignore  AGENTS.md  Cargo.toml  LICENSE  README.md  THIRD_PARTY_NOTICES.md  errors.json  eslint.config.js  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml  rootfs.yml
cowork/: Cargo.toml
cowork-errors/: Cargo.toml  build.rs
cowork-errors/src/: lib.rs  protocol.rs
cowork-errors/tests/: model.rs
cowork-host/: Cargo.toml
cowork-host/src/: lib.rs  protocol.rs  setup_marker.rs
cowork-host/src/auth/: mod.rs  windows_auth.rs
cowork-host/src/preflight/: decide.rs  windows_probe.rs
cowork-host/src/provision/: command.rs  inject.rs  list.rs  mod.rs  url.rs  windows_inject.rs  windows_provision.rs
cowork-host/src/pty/: command.rs  mod.rs  registry.rs  windows_pty.rs
cowork-host/src/session/: mod.rs  windows_session.rs
cowork-host/src/workspace/: metadata.rs  mod.rs  slug.rs  windows_workspace.rs
cowork-host/src/wsl/: command.rs  mod.rs  resume.rs  version.rs  windows_exec.rs
cowork-host/tests/: auth.rs  preflight.rs  protocol.rs  provision_command.rs  provision_flow.rs  provision_list.rs  pty.rs  pty_registry.rs  session.rs  setup_marker.rs  workspace.rs  wsl.rs
cowork-preflight/: Cargo.toml
cowork-preflight/src/: decide.rs  lib.rs  probe.rs  windows_probe.rs
cowork-preflight/tests/: decide.rs
cowork/src/: cmd.rs  main.rs  preset.rs  sink.rs  workspace.rs
cowork/src/agent/: auth.rs  command.rs  mod.rs  ops.rs  session.rs  theme.rs
cowork/src/bootstrap/: command.rs  mod.rs  ops.rs  sink.rs
docs/: plan.md  product-brief.md  v0.1.md  v0.2-full-gate.md  wp10-full-gate.md
docs/architecture/: isolation-and-platforms.md
docs/research/: opencovibe.md
messages/: README.md  en.json  ja.json  ko.json
project.inlang/: settings.json
scripts/conformance/: host_guest_separation.py
scripts/wp10/: fullgate.ps1
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md
src-tauri/src/: auth.rs  build_info.rs  lib.rs  main.rs  pty.rs  session.rs  setup.rs  window_theme.rs  workspace.rs
src/lib/: i18n.test.ts
src/lib/components/: AppBuildStamp.svelte  LanguageSelector.svelte  LiveTerminal.svelte  Terminal.svelte
src/lib/errors/: registry.test.ts  registry.ts
src/lib/host/: build.ts  client.ts  env.ts  mock.test.ts  mock.ts  types.ts
src/lib/shell/: AgentIcon.svelte  ConfirmDeleteDialog.svelte  NewWorkspaceDialog.svelte  Sidebar.svelte  TabStrip.svelte  WorkspaceRow.svelte  model.test.ts  model.ts  prefs.test.ts  prefs.ts  sessions.svelte.ts  sessions.test.ts  store.svelte.ts
src/lib/terminal/: agent.ts  decode.test.ts  decode.ts  links.test.ts  links.ts  login.test.ts  login.ts  pty.ts  ui.test.ts  ui.ts
src/lib/wizard/: AgentStep.svelte  AuthStep.svelte  DoneStep.svelte  ErrorPanel.svelte  LanguageStep.svelte  RunnerView.svelte  WizardShell.svelte  affordance.test.ts  affordance.ts  agents.test.ts  agents.ts  bootstrap.test.ts  bootstrap.ts  runner.test.ts  runner.ts  steps.test.ts  steps.ts  store.svelte.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte
src/routes/setup/: +page.svelte
src/routes/shell/: +page.svelte
src/routes/terminal/: +page.svelte
templates/: README.md
