[package]
name = "cowork-host"
description = "Cowork host-side setup logic (preflight, WSL enable, distro provision, ...). Tauri-independent so decision logic is unit-testable off-Windows; the cfg(windows) parts are the only OS-specific code."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "cowork_host"
path = "src/lib.rs"

[dependencies]
cowork-errors = { path = "../cowork-errors" }
serde = { workspace = true }
serde_json = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_Foundation",
    "Win32_System_Services",
    "Win32_System_SystemServices",
    "Win32_UI_Shell",
    "Win32_Networking_WinHttp",
] }
wmi = "0.18"
winreg = "0.56"
sha2 = "0.10"
# ConPTY-backed pseudo-console for the embedded terminal (WP8). Windows-only:
# the pure PTY command/env construction in `pty::command` has no portable-pty
# dependency, so the Linux unit build and the host/guest-separation gate are
# unaffected.
portable-pty = "0.9"
