[package]
name = "cowork"
description = "Cowork guest CLI — host-agnostic bootstrap agent that runs inside WSL"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "cowork"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
cowork-errors = { path = "../cowork-errors" }
libc = "0.2"
serde = { workspace = true }
serde_json = { workspace = true }
