[package]
name = "cowork-app"
description = "Cowork — Windows host driver (Tauri v2); builds Cowork.exe"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

# Tauri v2 layout: a thin bin that calls into the lib (keeps a future mobile
# target possible and the host-driver logic unit-testable).
[lib]
name = "cowork_app_lib"
crate-type = ["lib", "cdylib", "staticlib"]

# Cargo bin name differs from the bundled artifact on purpose: the workspace
# already has a `cowork` binary (the guest CLI), so this one is `cowork-app`.
# `productName = "Cowork"` in tauri.conf.json renames the bundle to Cowork.exe.
[[bin]]
name = "cowork-app"
path = "src/main.rs"

[features]
# Embed the cross-compiled guest `cowork` binary (musl x64) into the app via
# build.rs + include_bytes!. Off by default so dev builds and the CI host job
# compile without a prebuilt guest. The release workflow enables it and sets
# COWORK_GUEST_BIN to the musl artifact path.
embed-guest = []

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
serde = { workspace = true }
serde_json = { workspace = true }
# Host driver logic (PTY session, wsl.exe, preflight, …) lives in cowork-host;
# src-tauri is the thin Tauri command/event layer over it. cowork-errors gives
# the structured Envelope returned from commands to the localizing frontend.
cowork-host = { path = "../cowork-host" }
cowork-errors = { path = "../cowork-errors" }
# Base64-encode raw PTY output bytes for the Channel<String> stream (lossless
# across UTF-8 chunk boundaries; smaller JSON than an integer array).
base64 = "0.22"
